--- a/frontend/src/components/Desktop/RouteAnimator/AnimatedMarkerBox.css
+++ b/frontend/src/components/Desktop/RouteAnimator/AnimatedMarkerBox.css
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  z-index: 10000;
   animation: breathing 5s ease-out infinite normal;
   padding: 3px;
 }
